# tinyrunner

./: Dockerfile  README.md  SESSION.md  demo.py  pyproject.toml  requirements.txt  train.py
tinyrunner/: data.py  eval.py  loss.py  model.py  notify.py  trainer.py
