[project]
name = "tinyrunner"
version = "0.1.0"
description = "Train RF-DETR on custom datasets using tinygrad"
requires-python = ">=3.11"
dependencies = [
  "tinygrad>=0.12.0",
  "numpy",
  "pillow",
  "tqdm",
]

[project.optional-dependencies]
compare = ["ultralytics"]

[project.scripts]
tinyrunner-train = "train:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
